fix footer spacing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -171,6 +171,9 @@ article .readmore:hover {
 #sub-nav {
   padding: 20px 0 20px 0;
 }
+#sub-nav ul {
+  padding-top: 10px;
+}
 
 #sub-nav li {
   font-size: 16px;
@@ -198,31 +201,36 @@ article .readmore:hover {
   min-height: 180px;
   margin-top: 20px;
   overflow: auto;
+  float: left;
+  width: 63%;
+  padding: 0 20px 20px 20px;
 }
 
 #main-footer a {
   color: #fff;
+  
 }
 
 #main-footer .copy {
   padding-top: 20px;
+  line-height: 1.7em;
 }
 
 #main-footer .footer-left {
   float: left;
-  width: 30%;
+  width: 33%;
 }
 
 #main-footer .footer-right {
   float: right;
-  width: 70%;
+  width: 66%;
 }
  
 #main-footer .footer-nav {
   float: left;
   font-size: 15px;
-  width: 31%;
-  padding: 20px 0 20px 0;
+  width: 33%;
+  padding: 20px 0 10px 30px;
   margin-right: 10px;
 }
 
